<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:fitsSystemWindows="true"
    android:padding="30dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                style="@style/font20Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pool_name" />

            <EditText
                android:id="@+id/et_create_pool_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/edittext_background" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/jumbo" />


            <TextView
                style="@style/font20Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/pool_duration" />

            <EditText
                android:id="@+id/et_create_pool_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/edittext_background"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pool_months"
                android:textColor="@color/black" />


            <TextView
                style="@style/font20Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pool_individualShare" />

            <EditText
                android:id="@+id/et_create_pool_individual_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/edittext_background"
                android:inputType="number" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/jumbo" />



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/jumbo" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/jumbo" />


            <TextView
                style="@style/font20Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pool_meet_up" />

            <EditText
                android:id="@+id/et_create_pool_meet_up_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/only_date"
                android:inputType="number"
                android:padding="5dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/jumbo" />


            <TextView
                style="@style/font20Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pool_deposit_date" />

            <EditText
                android:id="@+id/et_create_pool_deposit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/only_date"
                android:inputType="number"
                android:padding="5dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/jumbo" />


            <TextView
                style="@style/font20Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pool_late_fee" />

            <EditText
                android:id="@+id/et_create_pool_late_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/late_fee"
                android:inputType="number"
                android:padding="5dp" />



            <TextView
                style="@style/font20Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pool_start_date" />



            <TextView
                android:id="@+id/et_create_pool_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/jumbo"
                android:hint="@string/date_format"
                android:padding="5dp" />



            <TextView
                style="@style/font20Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pool_end_date" />

            <EditText
                android:id="@+id/tv_create_pool_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:background="@color/jumbo"
                android:padding="5dp" />

            <TextView
                style="@style/font20Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pool_monthly_takeaway" />

            <EditText
                android:id="@+id/et_create_pool_takeaway"
                android:layout_width="match_parent"
                android:enabled="false"
                android:background="@color/jumbo"
                android:layout_height="wrap_content" />



            <TextView
                style="@style/font20Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pool_strength" />

            <EditText
                android:id="@+id/et_create_pool_strength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:enabled="false"
                android:background="@color/jumbo"
                android:inputType="number" />

            <Button
                android:id="@+id/bt_create_pool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/button"
                android:enabled="false"
                android:text="@string/create_pool" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>
