<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".activities.LoginScreen">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="35dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/app_logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/pacifico"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#5869cc"
            android:textSize="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_caption"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_login_username"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_login_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:enabled="false"
            android:text="@string/button_login" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ll_login"
        android:layout_alignParentRight="true"
        android:text="@string/register"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tv_alert_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_register"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:textColor="@color/primary_darker"
        android:textSize="20dp" />
</RelativeLayout>