<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:weightSum="1.6">

            <TextView
                android:id="@+id/tv_my_transactions_pool_id"
                style="@style/font15Blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center_horizontal"
                android:text="@string/pool_id" />

            <TextView
                android:id="@+id/tv_my_transactions_pool_counter"
                style="@style/font15Blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center_horizontal"
                android:text="@string/payment_current_counter" />

            <TextView
                android:id="@+id/tv_my_transactions_pool_individual_share"
                style="@style/font15Blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center_horizontal"
                android:text="@string/pool_individual_share" />

            <TextView
                android:id="@+id/tv_my_transactions_pool_payment_date"
                style="@style/font15Blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center_horizontal"
                android:text="@string/payment_date" />


        </TableRow>

    </TableLayout>


</LinearLayout>