<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Overview"
        style="@style/font25Blue"
        android:gravity="center_horizontal"/>

    <com.github.mikephil.charting.charts.PieChart
        android:layout_width="match_parent"
        android:layout_weight="0.5"
        android:layout_height="0dp"
        android:id="@+id/mp_pie_chart"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.5"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_current_transactions"
        android:gravity="center_horizontal"
        style="@style/font25Blue"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:weightSum="1.6">

            <TextView
                style="@style/font15Black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="@drawable/edittext_background"
                android:gravity="center_horizontal"
                android:text="@string/pool_id" />

            <TextView
                style="@style/font15Black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="@drawable/edittext_background"
                android:gravity="center_horizontal"
                android:text="@string/payment_current_counter" />

            <TextView
                style="@style/font15Black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="@drawable/edittext_background"
                android:gravity="center_horizontal"
                android:text="@string/pool_payment_amount" />


            <TextView
                style="@style/font15Black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="@drawable/edittext_background"
                android:gravity="center_horizontal"
                android:text="@string/payment_date" />

        </TableRow>

    </TableLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_my_transactions"/>
</LinearLayout>

</LinearLayout>