<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ask_update"
        android:gravity="center_horizontal"
        style="@style/textView25Black"
        android:layout_marginTop="45dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_update_member"
        android:background="@drawable/edittext_background"
        android:padding="5dp"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/jumbo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:id="@+id/ll_update_dialog"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="Field to Update"
            android:gravity="center_horizontal"
            style="@style/textView25Black"
            android:id="@+id/tv_selected_field_to_update" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="Data From DB"
            style="@style/textView25Black"
            android:gravity="center_horizontal"
            android:id="@+id/tv_data_from_db"/>

    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/jumbo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textView25Black"
            android:gravity="center_horizontal"
            android:text="@string/new_value_to_update"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_marginTop="30dp"
            android:id="@+id/et_update_value"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/jumbo" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"/>

    </LinearLayout>

</LinearLayout>

</LinearLayout>